# rdma_intercept_ldperload

./: .gitignore  CMakeLists.txt  README.md  VERSION_NOTES.md  build_ebpf.sh
docs/: paper_structure.md
experiment/evaluation/results/: baseline_results.csv  combined_results.csv  intercept_results.csv  performance_report.md
experiment/evaluation/scripts/: benchmark_throughput  benchmark_throughput.c  latency_test  latency_test.c  run_latency_test.sh  run_performance_eval.sh  run_performance_eval_v2.sh  test_intercept_simple.sh
experiments/: EXPERIMENT_REPORT.md  README.md
experiments/_old_files_backup/: analyze_bandwidth.py  exp1_microbenchmark.md  exp2_isolation.md  exp4_cache.md  exp5_dynamic_policy.md  exp5_dynamic_policy_effect.c  run_exp1.sh  run_exp_mr_dereg_v2.sh
experiments/exp1_microbenchmark/: README.md  microbenchmark  run.sh  run_with_warmup.sh
experiments/exp1_microbenchmark/analysis/: generate_report.sh  plot.py  plot_auto.py  plot_from_results.py
experiments/exp1_microbenchmark/results/: baseline.csv  with_intercept.csv
experiments/exp1_microbenchmark/src/: exp1_microbenchmark.c  exp1_microbenchmark_v2.c
experiments/exp2_multi_tenant_isolation/: README.md  check_tenants  check_tenants.c  create_tenant  exp2_multi_tenant_isolation  run_exp2.sh  run_exp2_final.sh  run_exp2_fixed.sh  run_exp2_v2.sh  test_intercept  test_intercept.c  update_tenant  update_tenant.c
experiments/exp2_multi_tenant_isolation/analysis/: plot_exp2.py
experiments/exp2_multi_tenant_isolation/src/: exp2_multi_tenant_isolation.c
experiments/exp3_scalability/: README.md  run.sh  run_exp3_final.sh
experiments/exp3_scalability/analysis/: plot.py
experiments/exp3_scalability/results/: exp3_10t_baseline.csv  exp3_10t_intercept.csv  exp3_1t_baseline.csv  exp3_1t_intercept.csv  exp3_20t_baseline.csv  exp3_20t_intercept.csv  exp3_50t_baseline.csv  exp3_50t_intercept.csv  exp3_5t_baseline.csv  exp3_5t_intercept.csv
experiments/exp3_scalability/src/: exp3_scalability.c
experiments/exp4_cache/: README.md  run.sh  run_exp4_final.sh
experiments/exp4_cache/analysis/: plot.py
experiments/exp4_cache/results/: exp4_adaptive_enabled.csv  exp4_hitrate_random_ttl100.csv  exp4_hitrate_random_ttl200.csv  exp4_hitrate_random_ttl50.csv  exp4_hitrate_sequential_ttl100.csv  exp4_hitrate_sequential_ttl200.csv  exp4_hitrate_sequential_ttl50.csv  exp4_hitrate_temporal_ttl100.csv  exp4_hitrate_temporal_ttl200.csv  exp4_hitrate_temporal_ttl50.csv  exp4_latency_nocache.csv  exp4_ttl100ms.csv  exp4_ttl200ms.csv  exp4_ttl500ms.csv  exp4_ttl50ms.csv
experiments/exp4_cache/src/: exp4_cache.c
experiments/exp5_dynamic_policy/: README.md  check_tenant50.c  delete_tenant50.c  reset_tenant50.c  test_quota.sh
experiments/exp5_dynamic_policy/analysis/: plot.py
experiments/exp5_dynamic_policy/src/: exp5_dynamic_policy_effect.c  exp5_hot_update_latency.c
experiments/exp6_bandwidth_impact/: README.md  run.sh  run_exp6.sh
experiments/exp6_bandwidth_impact/analysis/: plot.py
experiments/exp6_bandwidth_impact/results/: exp6_baseline.csv  exp6_intercept.csv
experiments/exp6_bandwidth_impact/results_backup/: exp6_intercept.csv
experiments/exp7_bandwidth_isolation/: README.md  run.sh  run_exp7.sh  run_local.sh
experiments/exp7_bandwidth_isolation/analysis/: plot.py
experiments/exp8_qp_isolation/: README.md  exp8_qp_isolation  run.sh
experiments/exp9_mr_isolation/: README.md  create_tenant.c  exp9_mr_isolation  run.sh  run_correct.sh  run_global_limit.sh  run_with_tenant.sh
experiments/exp_mr_dereg/: QUICKSTART.md  README.md  attacker_mr_dereg  run_exp1_no_intercept.sh  run_exp2_with_intercept.sh  run_exp_correct.sh  run_exp_current.sh  run_exp_real.sh  run_local.sh  run_real_experiment.sh  victim_monitor
experiments_backup_20260410_102628/_old_files_backup/: EXP-MR-DEREG-V2.md  EXPERIMENTS_SUMMARY.md  QUICKSTART.md  exp2_tenant_manager.sh  exp3_scalability.md  exp5_measure_latency.c  exp_mr_dereg_attacker.c  victim_bw_monitor.py
experiments_backup_20260410_102628/exp1_microbenchmark/: run.sh
experiments_backup_20260410_102628/exp2_multi_tenant_isolation/: exp3_setup_tenants.sh
experiments_backup_20260410_102628/exp3_scalability/: README.md
experiments_backup_20260410_102628/exp4_cache/: README.md
experiments_backup_20260410_102628/exp5_dynamic_policy/: README.md
experiments_backup_20260410_102628/exp6_bandwidth_impact/: README.md
experiments_backup_20260410_102628/exp7_bandwidth_isolation/: README.md
experiments_backup_20260410_102628/exp_mr_dereg/: README.md  attacker  run.sh  run_manual.sh
include/: dynamic_policy.h  performance_optimizer.h  rdma_intercept.h
paper_results/: README.md  plot_experiment_results.py
paper_results/exp1/: RESULT_SUMMARY.md  intercepted_v2.txt  plot.py
paper_results/exp2/: plot.py  scene2_tenantB.txt  scene3_heavy.txt  scene3_light_baseline.txt  scene3_light_with_heavy.txt
paper_results/exp5/: RESULT_SUMMARY.md  dynamic_policy_effect.txt
paper_results/exp_mr_dereg/: README.md  plot.py
scripts/: build_all.sh  rdma_tenant_ctl
src/: collector_client.c  collector_server.c  collector_server_shm.c  config.c  dynamic_policy.c  dynamic_policy_manager.c  intercept_core.c  logger.c  performance_optimizer.c  rdma_hooks.c  rdma_hooks_tenant.c  tenant_manager.c  tenant_manager_client.c  tenant_manager_daemon.c
src/ebpf/: ebpf_monitor.c  ebpf_monitor.h  ebpf_monitor_shm.c  ebpf_monitor_shm.h  rdma_monitor  rdma_monitor.bpf.c  rdma_monitor.c
src/shm/: shared_memory.c  shared_memory.h  shared_memory_tenant.c  shared_memory_tenant.h
tests/: benchmark_suite.sh  run_all_tests.sh  test_collector_comm.c  test_dynamic_policy.c  test_global_limit.c  test_global_limit.sh  test_intercept_ebpf.c  test_intercept_functionality.c  test_intercept_functionality.sh  test_memory_registration.sh  test_multi_tenant.sh  test_performance_optimizer.c  test_qp_intercept.sh  test_qp_lifecycle.sh  test_real_qp_intercept.sh  test_resource_limit.sh  test_shared_memory.c  test_shm_version.c  test_system_validation.sh
tools/: generate_figures.py
(+86 files in other folders)
